Version 5.1.3  [DEVEL] (rgerhards), 2009-07-??
- enhance: UDP spoofing supported via new output module omudpspoof
  See the omudpspoof documentation for details and samples
- bugfix: message could be truncated after TAG, often when forwarding
  This was a result of an internal processing error if maximum field
  sizes had been specified in the property replacer.
---------------------------------------------------------------------------
Version 5.1.2  [DEVEL] (rgerhards), 2009-07-08
- bugfix: properties inputname, fromhost, fromhost-ip, msg were lost when
  working with disk queues
- some performance enhancements
- bugfix: abort condition when RecvFrom was not set and message reduction
  was on. Happend e.g. with imuxsock.
- added $klogConsoleLogLevel directive which permits to set a new
  console log level while rsyslog is active
- some internal code cleanup
---------------------------------------------------------------------------
Version 5.1.1  [DEVEL] (rgerhards), 2009-07-03
- bugfix: huge memory leak in queue engine (made rsyslogd unusable in
  production). Occured if at least one queue was in direct mode 
  (the default for action queues)
- imported many performance optimizations from v4-devel (4.5.0)
- bugfix: subtle (and usually irrelevant) issue in timout processing
  timeout could be one second too early if nanoseconds wrapped
- set a more sensible timeout for shutdow, now 1.5 seconds to complete
  processing (this also removes those cases where the shutdown message
  was not written because the termination happened before it)
---------------------------------------------------------------------------
Version 5.1.0  [DEVEL] (rgerhards), 2009-05-29

*********************************** NOTE **********************************
The v5 versions of rsyslog feature a greatly redesigned queue engine. The
major theme for the v5 release is twofold:

a) greatly improved performance
b) enable audit-grade processing
