@@ -34,6 +34,7 @@
 struct wti_s {
 	BEGINobjInstance;
 	pthread_t thrdID; 	/* thread ID */
+	bool bAlwaysRunning;	/* should this thread always run? */
 	bool bIsRunning;	/* is this thread currently running? */
 	wtp_t *pWtp; /* my worker thread pool (important if only the work thread instance is passed! */
 	batch_t batch; /* pointer to an object array meaningful for current user pointer (e.g. queue pUsr data elemt) */
@@ -48,6 +49,7 @@ rsRetVal wtiDestruct(wti_t **ppThis);
 rsRetVal wtiWorker(wti_t *pThis);
 rsRetVal wtiSetDbgHdr(wti_t *pThis, uchar *pszMsg, size_t lenMsg);
 rsRetVal wtiCancelThrd(wti_t *pThis);
+rsRetVal wtiSetAlwaysRunning(wti_t *pThis);
 rsRetVal wtiSetState(wti_t *pThis, bool bNew);
 bool wtiGetState(wti_t *pThis);
 PROTOTYPEObjClassInit(wti);
