@@ -5,6 +5,10 @@ Version 5.1.3  [DEVEL] (rgerhards), 2009-07-??
 - bugfix: message could be truncated after TAG, often when forwarding
   This was a result of an internal processing error if maximum field
   sizes had been specified in the property replacer.
+- architecture change: queue now always has at least one worker thread
+  if not running in direct mode. Previous versions could run without 
+  any active workers. This simplifies the code at a very small expense.
+  See v5 compatibility note document for more in-depth discussion.
 ---------------------------------------------------------------------------
 Version 5.1.2  [DEVEL] (rgerhards), 2009-07-08
 - bugfix: properties inputname, fromhost, fromhost-ip, msg were lost when
